fix horizontal scroll

--- a/src/styles/blocks/about-us.scss
+++ b/src/styles/blocks/about-us.scss
@@ -1,36 +1,20 @@
 .about-us {
-  position: relative;
-  padding-top: 248px;
+  background-color: $bg-about-us-color;
 
-  @include pageGrid;
+  &__wrapper {
+    padding-block: 48px;
 
-  @include onTablet {
-    padding-top: 520px;
-    padding-bottom: 120px;
-  }
+    @include pageGrid;
 
-  @include onDesktop {
-    padding-top: 580px;
-  }
-
-  &__bg {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: -1;
-    top: 0;
-    height: 100%;
-    width: 100vw;
-    background-color: $bg-about-us-color;
+    @include onTablet {
+      padding-block: 120px;
+    }
   }
 
   &__image {
-    position: absolute;
-    left: 50%;
-    top: 0;
+    display: flex;
     height: 200px;
-    width: 100vw;
-    transform: translateX(-50%);
+    width: 100%;
     object-fit: cover;
     object-position: center;
 
@@ -49,11 +33,11 @@
     grid-column: 1 / -1;
 
     @include onTablet {
+      margin-bottom: 0;
       grid-column: 1 / 4;
     }
 
     @include onDesktop {
-      margin-bottom: 0;
       grid-column: span 6;
     }
 
@@ -61,7 +45,6 @@
 
   &__text {
     grid-column: 1 / -1;
-    margin-bottom: 48px;
     letter-spacing: 0.15px;
 
     @include onTablet {
